# habit_tracker

./: .coverage  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  dump.rdb  manage.py  pyproject.toml
bot_app/: conftest.py  views.py
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  paginators.py  permisions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_celery_py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_306da91e26d1596c_0001_initial_py.html  z_306da91e26d1596c_0002_alter_habituseful_periodicity_py.html  z_306da91e26d1596c_0003_habituseful_is_public_py.html  z_306da91e26d1596c___init___py.html  z_47360612c3368cbd_0001_initial_py.html  z_47360612c3368cbd___init___py.html  z_799887e2301a09ca___init___py.html  z_799887e2301a09ca_admin_py.html  z_799887e2301a09ca_apps_py.html  z_799887e2301a09ca_models_py.html  z_799887e2301a09ca_paginators_py.html  z_799887e2301a09ca_permisions_py.html  z_799887e2301a09ca_serializers_py.html  z_799887e2301a09ca_tests_py.html  z_799887e2301a09ca_urls_py.html  z_799887e2301a09ca_validators_py.html  z_799887e2301a09ca_views_py.html  z_919bce7ed0143e37___init___py.html  z_919bce7ed0143e37_admin_py.html  z_919bce7ed0143e37_apps_py.html  z_919bce7ed0143e37_models_py.html  z_919bce7ed0143e37_paginators_py.html  z_919bce7ed0143e37_permisions_py.html  z_919bce7ed0143e37_serializers_py.html  (+15 more)
(+34 files in other folders)
